spring-boot-kafka-producer/k8s/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spkafkaapplication
  name: spkafkaapplication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spkafkaapplication
  template:
    metadata:
      labels:
        app: spkafkaapplication
    spec:
      nodeSelector:
        role : kafka
      tolerations:
      - key: node-role.kubernetes.io/kafka 
        value: "true"
        operator: "Equal"
        effect: NoSchedule
      containers:
      - name: spkafkaapplication
        image: mrabbah/spring-boot-kafka-producer:latest
